[gd_scene load_steps=18 format=3 uid="uid://cgntexit802at"]

[ext_resource type="Script" uid="uid://b34o6hvc4sfb5" path="res://GUI/black_curtain.gd" id="1_2fegy"]
[ext_resource type="Script" uid="uid://ds04dwggool3i" path="res://GUI/ui.gd" id="1_lqxss"]
[ext_resource type="Theme" uid="uid://dediyadnq7o1d" path="res://GUI/main.theme" id="2_b5xco"]
[ext_resource type="Script" uid="uid://chi0okhj6omam" path="res://AppManager/slide_reel.gd" id="5_edbe7"]
[ext_resource type="PackedScene" uid="uid://ms4uukon6dti" path="res://GUI/MainMenu.tscn" id="6_60d5t"]
[ext_resource type="Texture2D" uid="uid://0l05qi2ha4p5" path="res://hero.png" id="6_j0bi8"]
[ext_resource type="Script" uid="uid://ddia53ohnh44e" path="res://AppManager/slide.gd" id="7_0ssnq"]
[ext_resource type="PackedScene" uid="uid://cnil5t8gbosn3" path="res://GUI/OptionsMenu.tscn" id="7_3hcxp"]
[ext_resource type="Texture2D" uid="uid://d2gdo5bbgykv2" path="res://icon.svg" id="8_7bl5a"]
[ext_resource type="PackedScene" uid="uid://dst760bvjwktu" path="res://GUI/PauseMenu.tscn" id="9_u7t3d"]
[ext_resource type="PackedScene" uid="uid://b424bvcxa2fbn" path="res://GUI/BossOverlay.tscn" id="10_coqvt"]
[ext_resource type="PackedScene" uid="uid://y7aq3dk02d8w" path="res://GUI/ConfirmationMenu.tscn" id="10_mlc10"]
[ext_resource type="PackedScene" uid="uid://d1h8vf2t5pgey" path="res://GUI/MiniMap.tscn" id="11_01e55"]
[ext_resource type="Script" uid="uid://bn1pfy7a56sjh" path="res://GUI/on_screen_notification_label.gd" id="11_ahf6e"]
[ext_resource type="PackedScene" uid="uid://dvk1kn7j0htsi" path="res://GUI/Dialog.tscn" id="12_kwodg"]
[ext_resource type="Script" uid="uid://bl8fn3wgrmffv" path="res://GUI/hud.gd" id="12_qer54"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5xco"]
bg_color = Color(0, 0, 0, 0.627451)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_lqxss")

[node name="GameTimeLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -318.0
offset_bottom = 64.0
grow_horizontal = 0
theme = ExtResource("2_b5xco")
theme_type_variation = &"GameTimeLabel"
theme_override_styles/normal = SubResource("StyleBoxFlat_b5xco")
horizontal_alignment = 2
vertical_alignment = 1

[node name="BlackCurtain" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_2fegy")

[node name="Hud" type="Node" parent="."]
script = ExtResource("12_qer54")

[node name="BossOverlay" parent="Hud" instance=ExtResource("10_coqvt")]

[node name="MiniMap" parent="Hud" instance=ExtResource("11_01e55")]

[node name="Dialog" parent="Hud" instance=ExtResource("12_kwodg")]

[node name="SlideReel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_edbe7")

[node name="Slide1" type="TextureRect" parent="SlideReel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_j0bi8")
script = ExtResource("7_0ssnq")
metadata/_edit_use_anchors_ = true

[node name="Slide2" type="TextureRect" parent="SlideReel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_7bl5a")
script = ExtResource("7_0ssnq")
metadata/_edit_use_anchors_ = true

[node name="MainMenu" parent="." instance=ExtResource("6_60d5t")]

[node name="ConfirmationMenu" parent="." instance=ExtResource("10_mlc10")]

[node name="PauseMenu" parent="." instance=ExtResource("9_u7t3d")]

[node name="OptionsMenu" parent="." instance=ExtResource("7_3hcxp")]

[node name="OnScreenNotificationLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -96.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Game Saved"
horizontal_alignment = 2
vertical_alignment = 2
script = ExtResource("11_ahf6e")
